src/objects/Campaign_Gate_Approval_History__c/Campaign_Gate_Approval_History__c.object-meta.xml
<CustomObject>
    <label>Campaign Tollgate  Approval History</label>
    <nameField>
        <displayFormat>CPAH-{0000}</displayFormat>
        <label>Tollgate  Approval History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Campaign Tollgate  Approval History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>