src/objects/Campaign_Gate_Approval_History__c/fields/Approver_Name__c.field-meta.xml
<CustomField>
    <fullName>Approver_Name__c</fullName>
    <label>Approver Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>