src/objects/Campaign_Gate_Approval_History__c/fields/Campaign_Phase__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Phase__c</fullName>
    <label>Campaign Tollgate</label>
    <referenceTo>Campaign_Gate__c</referenceTo>
    <relationshipLabel>Campaign Tollgate  Approval History</relationshipLabel>
    <relationshipName>Campaign_Gate_Approval_Histories</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>