src/objects/Campaign_Gate_Approval_History__c/fields/Campaign_Team_Name__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Team_Name__c</fullName>
    <label>Campaign Team Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>