src/objects/Campaign_Gate_Approval_History__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <description>This field is to store comments entered by user when he approves/rejects the tollgate record</description>
    <label>Comments</label>
    <type>TextArea</type>
</CustomField>